--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,5 +1,5 @@
 $lightgrey : #e6ebf0;
-
-
-$accent : #fc5a74;
-$accent-gradient : linear-gradient(to top, #ff0844 0%, #ff9191 100%);
+$grey: #C4C4C4;
+$black: #383838;
+$accent : #ff7272;
+$accent-gradient : linear-gradient(to top, #ff5151 0%, #ff9191 100%);
