Add rough content to landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,33 +1,16 @@
-<div class="container">
+<div class="container" style="margin-top: 100px;">
 
   <div class="row">
-    <div class="col-md-8 mb-5">
-      <h2>What We Do</h2>
+    <div class="col-12 mb-5">
+      <h2>Es ist 1940</h2>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta
-        quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo,
-        maiores!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in
-        nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.
+      <p>
+        Man stelle sich vor es ist 1940. Die deutschen Flieger fliegen gefährlich nah an der Schweiz,
+        die Franzosen machen langsam schlapp und die Schweiz rüstet die Bergen mit Bunkern aus.
       </p>
-      <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
-    </div>
-    <div class="col-md-4 mb-5">
-      <h2>Contact Us</h2>
-      <hr>
-      <address>
-        <strong>Start Bootstrap</strong>
-        <br>3481 Melrose Place
-        <br>Beverly Hills, CA 90210
-        <br>
-      </address>
-      <address>
-        <abbr title="Phone">P:</abbr>
-        (123) 456-7890
-        <br>
-        <abbr title="Email">E:</abbr>
-        <a href="mailto:#">name@example.com</a>
-      </address>
+      <p>
+        Auf dieser Seite erhält man einen Einblick in die Personen, Stellungen und Bunker der damaligen Zeit.
+      </p>
     </div>
   </div>
 
@@ -36,9 +19,10 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-            neque sequi doloribus.</p>
+          <h4 class="card-title">Wer sind wir?</h4>
+          <p class="card-text">
+            Lüütlis us de BBB.
+          </p>
         </div>
         <div class="card-footer">
           <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -49,9 +33,10 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-            neque sequi doloribus totam ut praesentium aut.</p>
+          <h4 class="card-title">IDPA 2018</h4>
+          <p class="card-text">
+            Zu unserer Webseite.
+          </p>
         </div>
         <div class="card-footer">
           <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -62,9 +47,10 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-            neque.</p>
+          <h4 class="card-title">Unsern Dank</h4>
+          <p class="card-text">
+            Danke a mis Mami.
+          </p>
         </div>
         <div class="card-footer">
           <a href="#" class="btn btn-primary">Find Out More!</a>
