--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,7 +9,9 @@
         die Franzosen machen langsam schlapp und die Schweiz rüstet die Bergen mit Bunkern aus.
       </p>
       <p>
-        Auf dieser Seite erhält man einen Einblick in die Personen, Stellungen und Bunker der damaligen Zeit.
+        Als Teil unserer IDPA Arbeit an der BBBaden in 2018-19 erarbeiteten wir einen Einblick in die Personen,
+        Strategien und Bunker mittels Operationsbefehlen, Internet und Besuchen, welche wir Ihnen auf dieser
+        Seite präsentieren möchten.
       </p>
     </div>
   </div>
@@ -19,13 +21,17 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">Wer sind wir?</h4>
+          <h4 class="card-title">Wieso gab es diese Bunker?</h4>
           <p class="card-text">
-            Lüütlis us de BBB.
+            Die Schweiz war im Zweiten Weltkrieg in der glücklichen Lage, von keinem feindlichen Lang eingenommen zu
+            werden, jedoch war die Angst vor einem Angriff konstant vorhanden und riefen mit der Zeit nach
+            Vorbereitungsaktionen.
+            So gab Henri Guisan 19.. die ersten Befehle, Bunker in der Schweiz zu errichten, von denen aus das
+            Militär die Feinde so lange, wie möglich zurückhalten könnte.
           </p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a routerLink="/personen" class="btn btn-primary">Wer war Henri Guisan?</a>
         </div>
       </div>
     </div>
@@ -33,13 +39,16 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">IDPA 2018</h4>
+          <h4 class="card-title">Wo gab es diese Bunker?</h4>
           <p class="card-text">
-            Zu unserer Webseite.
+            Die meisten Bunker waren in die Berge konzentiert, die erhöhte Lage bietete einen strategischen Vorteil.
+            Es wurden Linien entlang der Grenzen zu Italien, Frankreich, Deutschland und Österreich gebildet.
+            Dutzende Bunker, exquisit in dem Gesteine der Felsen verstecke, waren entland dieser Linien verteilt, einzig
+            erkennbar durch kaum entdeckbare und gut getarnte Löcher im Felsen, aus denen gesehen und geschossen wurde.
           </p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a routerLink="/festung-vitznau" class="btn btn-primary">Zur Karte der Bunker</a>
         </div>
       </div>
     </div>
@@ -47,13 +56,16 @@
       <div class="card h-100">
         <img class="card-img-top" src="http://placehold.it/300x200" alt="">
         <div class="card-body">
-          <h4 class="card-title">Unsern Dank</h4>
+          <h4 class="card-title">Wie steht es mit den Bunkern heute?</h4>
           <p class="card-text">
-            Danke a mis Mami.
+            Nach dem Ende des Zweiten Weltkrieges wurden einige Bunker stillgelegt, andere wurden zu Museen, Hotels
+            oder ... umegrüstet.
+            Mit unserer IDPA Gruppe besuchten wir eine dieser Bunker-Museen, die Festung Vitznau.
+            Unsere Eindrücke und Bilder dieses Besuches präsentieren wir ebenfalls auf dieser Seite.
           </p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Find Out More!</a>
+          <a routerLink="/festung-vitznau" class="btn btn-primary">Mehr über Vitznau</a>
         </div>
       </div>
     </div>
