--- a/src/app/div/div.component.html
+++ b/src/app/div/div.component.html
@@ -24,7 +24,18 @@
   <h5 id="group">Grupe</h5>
   <p>Wer sind wir?</p>
   <h4 id="thank">Dank</h4>
-  <p>Danke a mis Mami.</p>
+  <p>An dieser Stelle möchten wir uns bei allen bedanken, die unser während unser Arbeit
+mit Unterlagen, Informationen, Hilfestellungen oder emotional unterstützt haben.
+
+Als Erstes bedanken wir uns bei unserer Ansprechsperson für diese Arbeit, Frau Berger.
+
+Ebenfalls möchten wir ... für die digitalen Kopien der Operationsbefehle danken und
+Erich Steiner für die Führung durch die Festung Vitznau. 
+
+Wir bedanken uns auch bei allen Personen, die unsere Arbeit gegengelesen haben.
+
+Zu Guter Letzt möchten wir uns bei unseren Familien für ihre Unterstützung bedanken.
+</p>
   <h4 id="append">Anhang</h4>
   <h5 id="impress">Impressum</h5>
   <p>Impressum Text</p>
