--- a/src/app/views/military-fortress/military-fortress.component.html
+++ b/src/app/views/military-fortress/military-fortress.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="military-fortress_slideshow_buttons">
+  <div class="military-fortress_slideshow_buttons" *ngIf="currentFortressItem.slides.length > 1">
       <div class="military-fortress_slideshow_button" (click)="move(-1)">
         <fa name="arrow-left"></fa>
       </div>
@@ -29,93 +29,100 @@
           <path fill="none" d="M243.37,218.28l4.92-4.9,2.4,2.4,4.76-4.76L361.28,316.73c4.41,4.41,9.7,7.53,9.7,25.5,0,21.29-2.63,126-2.63,126h13V416.85h-6.93s2.31-69,2.31-81c0-11.81-7.6-18.31-12.56-23.26L328.7,277.07l6.48-6.48-4.28-4.28L349,248.17l1.75,1.75,1.57-1.58,23.77,23.77,8.67-8.67-24-24.05,1.86-1.86-1.41-1.41L372.35,225l2.14,2.14,3.66-3.66,29.4,29.4L422,238.43,355.74,172.2,341,186.9l31.2,31.2-14.81,14.81L324.54,200l-11,11,32.44,32.44-19.35,19.34-3.43-3.43-5.88,5.89L256,204l88.36-88.36L333.6,104.91l-88.81,88.81-56.66-56.66L278,47.31l-13-13L160.43,139c-5.41,5.4-12.67,5.83-18.56,5.83s-16.46-1.23-26.78,9.09l-7.61,7.62-5.41-5.41-8.85,8.85-2.7-2.7-3.47,3.47H85.13L75.88,175l.39,3.15,8.09,8,3.89.1,13.13-13.14,2.65,2.65,8.85-8.85-1.8-1.8c10.7-10.7,14.21-14.91,27.44-14.91,10.42,0,16.53,2.11,28.18-9.55l8.82,8.82,8.54-8.65,20.12,20.12-6.49,6.48,3.89,3.86L150.39,223l-4-4-14.46,14.3,4.76,4.85,4.68-4.77,2.13,2,61.27-61,4,4,6.4-6.49,24.48,24.48-7.37,7.37,9.42,9.42L240,214.88c-8.41,8.41-9.33,12.75-9.18,27.21.16,16.28,4.42,16.76-11.91,33.09l-7.06-7.06-8,8-1.06-1.06-14.25,14.25v2.31l8.41,8.51h2.87l13.51-13.52,3.07,3.08,1.62-1.62-7.27,26.67,5.61,1.44,9.27-35.13L223,278.43s2-2,4.89-4.89c8.15-8,9.13-12.21,8.57-28.51,0-.73,0-1.47-.11-2.19C236,239.3,234.57,227.18,243.37,218.28Z" transform="translate(-70.62 -27.27)" />
           <path fill="#383838" d="M210.71,314.74l5.62,1.44,9.27-35.13L223,278.43s2-2,4.89-4.89c8.15-8,9.13-12.21,8.57-28.51,0-.73,0-1.47-.1-2.2-.35-3.53-1.77-15.65,7-24.55l4.92-4.9,2.4,2.4,4.76-4.76L361.28,316.73c.86.85,1.75,1.66,2.62,2.53,3.64,3.65,7.08,8.48,7.08,23,0,21.28-2.63,126-2.63,126h13V416.85h-6.93s2.31-69,2.31-81c0-9.95-5.39-16.12-10.05-20.78-.87-.88-1.72-1.7-2.51-2.48L328.7,277.07l6.48-6.48-4.28-4.28L349,248.18l1.75,1.74,1.58-1.57,23.76,23.76,8.68-8.67-24.05-24.05,1.86-1.86-1.41-1.41L372.35,225l2.14,2.14,3.66-3.66,29.4,29.4L422,238.43,355.74,172.2,341,186.9l31.2,31.2-14.81,14.81L324.54,200l-11,11,32.44,32.44-19.35,19.35-3.44-3.44-5.88,5.89L256,204l88.36-88.36L333.6,104.91l-88.81,88.81-56.65-56.66L278,47.31l-13-13-89.79,89.78L160.43,139c-5.41,5.4-12.67,5.83-18.56,5.83s-16.46-1.23-26.78,9.09l-7.62,7.62,0,0,0,0-5.4-5.41-8.85,8.85-2.7-2.7-3.47,3.47H85.13L75.88,175l.38,3.15,8.1,8,3.89.1,13.14-13.14,2.64,2.65,8.85-8.85-1.8-1.8c10.7-10.7,14.22-14.91,27.44-14.91,10.42,0,16.53,2.11,28.19-9.55l8.81,8.82,8.54-8.65,20.12,20.12-6.48,6.48,3.88,3.86L150.39,223l-4-4L131.9,233.29l4.76,4.85,4.68-4.77,2.13,2,61.27-61,4,4,6.41-6.49,24.48,24.48-7.37,7.37,9.42,9.42L240,214.88c-8.42,8.41-9.33,12.75-9.18,27.21.16,16.28,4.42,16.76-11.91,33.09l-7.06-7.06-8,8-1.06-1.07L188.51,289.3v2.32l8.4,8.5h2.87l13.51-13.51,3.08,3.08,1.61-1.62-7.27,26.67m-6.16,3.57,1.34-4.89,4.62-17-7.19,7.2-1.47,1.46h-7l-1.46-1.48L185,295.13l-1.44-1.46v-6.44l1.46-1.46,14.25-14.25,3.54-3.54,1.06,1.07,4.46-4.46,3.54-3.54,3.53,3.54,3.48,3.47c3.75-4,5.84-6.76,6.78-8.95s.9-4.21.57-8.73c-.16-2.19-.36-4.92-.39-8.24-.08-7.79.15-12.88,1.62-17.45a25.34,25.34,0,0,1,3.45-6.9,40.78,40.78,0,0,1,3.79-4.6l-5.92-5.92-3.53-3.53,3.53-3.54,3.84-3.83L215.18,179l-2.87,2.91-3.52,3.57-3.56-3.53-.48-.49L147,239l-3.46,3.44-2.09-2-1.22,1.24-3.57,3.63-3.57-3.63-4.76-4.85-3.49-3.55,3.54-3.51,14.46-14.29,3.54-3.49,3.51,3.51.48.47,44.15-44.64-.35-.34-3.56-3.53,3.55-3.55,3-3-13-13-5,5.07-3.54,3.58L172,153l-5.42-5.41a31.91,31.91,0,0,1-11.13,6.5c-4.56,1.44-8.64,1.32-13,1.19-1.27,0-2.58-.08-3.95-.08-9.71,0-12.59,2.16-20.37,9.91l1.8,1.8-3.54,3.54-8.84,8.84L104,182.81l-2.65-2.65-9.6,9.61-1.52,1.51-2.14-.05-3.88-.1-2,0-1.41-1.4-8.1-8-1.23-1.22-.21-1.72-.38-3.15-.3-2.42,1.72-1.72,9.25-9.25,1.46-1.46H85l2-2,3.54-3.53,2.7,2.7,5.31-5.31,3.54-3.54,3.53,3.54,1.87,1.86,4.08-4.08a38,38,0,0,1,8.11-6.22,33.43,33.43,0,0,1,8-3.2,45.33,45.33,0,0,1,12.63-1.15l1.63,0c5.15,0,11-.34,15-4.37l14.83-14.82L261.5,30.81,265,27.27l3.53,3.54,13,13,3.53,3.54-3.54,3.54-86.32,86.21,49.58,49.59,85.28-85.28,3.53-3.54,3.54,3.54,10.75,10.76,3.54,3.53-3.54,3.54L263.07,204l54.2,54.21,2.35-2.35,3.53-3.54,3.44,3.44,12.28-12.28L310,214.6l-3.53-3.54,3.53-3.53,11-11,3.54-3.54,3.53,3.54,29.36,29.35,7.74-7.74L337.5,190.44,334,186.9l3.53-3.53,14.7-14.7,3.54-3.54,3.53,3.54L425.5,234.9l3.54,3.53L425.5,242l-14.42,14.42-3.53,3.53L404,256.39l-25.86-25.87-.13.13-3.53,3.53L372.35,232l-4.08,4.08,1.41,1.41-1.86,1.86,20.51,20.51,3.54,3.54L388.33,267l-8.67,8.68-3.54,3.53-3.53-3.53-20.23-20.23L350.78,257,349,255.25,338,266.31l.75.75,3.53,3.53-3.53,3.54-3,2.94,32,31.94c.36.37.75.75,1.15,1.14l1.36,1.34A45.34,45.34,0,0,1,377.8,321a29.52,29.52,0,0,1,2.84,6.71,30.14,30.14,0,0,1,1.1,8.15c0,10.16-1.6,59.68-2.14,76h6.76v61.36H363.22l.13-5.13c0-1,2.63-104.87,2.63-125.85,0-6-.61-10.49-1.85-13.78a14.89,14.89,0,0,0-3.76-5.65c-.4-.4-.81-.79-1.24-1.2s-.91-.87-1.38-1.34L255.45,218.09l-1.22,1.22-3.54,3.54-2.4-2.41-1.38,1.37a20.25,20.25,0,0,0-5.5,11.26,33.87,33.87,0,0,0-.12,9l0,.25c.07.73.09,1.42.11,2,0,.16,0,.32,0,.48.29,8.57.19,14.13-1.22,18.94-1.57,5.38-4.67,9.21-8.85,13.31L230,278.42l1.13,1.13-.74,2.78-9.27,35.13-1.27,4.81L215.08,321l-5.62-1.45Z" transform="translate(-70.62 -27.27)" />
         </g>
-        <g (click)="changeRoom('room0')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'room0', 
-                            'fillnone' : currentFortressItem.roomName != 'room0',
+        <g (click)="changeRoom(13)" title="test">
+          <title>Wachposten</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 13, 
+                            'fillnone' : currentFortressItem.roomId != 13,
                             'strokeaccent' : true}"
            cx="59.67" cy="195.48" r="9.48" />
         </g>
-        <g (click)="changeRoom('room1')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'room1', 
-                              'fillnone' : currentFortressItem.roomName != 'room1',
+        <g (click)="changeRoom(11)">
+          <title>Schiessstand 2</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 11, 
+                              'fillnone' : currentFortressItem.roomId != 11,
                               'strokeaccent' : true}"
             cx="14.08" cy="132.94" r="9.48" />
         </g>
-        <g (click)="changeRoom('room2')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'room2', 
-                              'fillnone' : currentFortressItem.roomName != 'room2',
-                              'strokeaccent' : true}"
-            cx="171.6" cy="213.62" r="9.48" />
-        </g>
-        <g (click)="changeRoom('room3')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'room3', 
-                              'fillnone' : currentFortressItem.roomName != 'room3',
+        <!--<g (click)="changeRoom(0)">
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 0, 
+                              'fillnone' : currentFortressItem.roomId != 0,
                               'strokeaccent' : true}"
               cx="171.6" cy="213.62" r="9.48" />
-        </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        </g>-->
+        <g (click)="changeRoom(9)">
+          <title>Munitionslager 1</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 9, 
+                              'fillnone' : currentFortressItem.roomId != 9,
                               'strokeaccent' : true}"
             cx="197.48" cy="175.39" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(12)">
+          <title>Treppe zum Wachposten</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 12, 
+                              'fillnone' : currentFortressItem.roomId != 12,
                               'strokeaccent' : true}"
             cx="112.05" cy="166.7" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(10)">
+            <title>Munitionslager 2</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 10, 
+                              'fillnone' : currentFortressItem.roomId != 10,
                               'strokeaccent' : true}"
             cx="130.15" cy="108.05" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(8)">
+            <title>Festungsgang</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 8, 
+                              'fillnone' : currentFortressItem.roomId != 8,
                               'strokeaccent' : true}"
             cx="228.13" cy="230.43" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(3)">
+            <title>Waffenlager</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 3, 
+                              'fillnone' : currentFortressItem.roomId != 3,
                               'strokeaccent' : true}"
             cx="272.54" cy="246.59" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(2)">
+            <title>Gedenkstätte</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 2, 
+                              'fillnone' : currentFortressItem.roomId != 2,
                               'strokeaccent' : true}"
             cx="313.43" cy="297.08" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(1)">
+            <title>Eingangsbereich</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 1, 
+                              'fillnone' : currentFortressItem.roomId != 1,
                               'strokeaccent' : true}"
             cx="314.15" cy="387.74" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(6)">
+            <title>Heizungsraum</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 6, 
+                              'fillnone' : currentFortressItem.roomId != 6,
                               'strokeaccent' : true}"
             cx="304.43" cy="221.42" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(4)">
+            <title>Werkstatt</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 4, 
+                              'fillnone' : currentFortressItem.roomId != 4,
                               'strokeaccent' : true}"
             cx="268.65" cy="206.86" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(5)">
+            <title>Stromgeneratoren-Raum</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 5, 
+                              'fillnone' : currentFortressItem.roomId != 5,
                               'strokeaccent' : true}"
             cx="254" cy="175.27" r="9.48" />
         </g>
-        <g (click)="changeRoom('')">
-          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomName == 'asdf', 
-                              'fillnone' : currentFortressItem.roomName != 'asdf',
+        <g (click)="changeRoom(7)">
+            <title>Unterkunftstrakt</title>
+          <circle [ngClass]="{'fillaccent' : currentFortressItem.roomId == 7, 
+                              'fillnone' : currentFortressItem.roomId != 7,
                               'strokeaccent' : true}"
             cx="319.44" cy="179.2" r="9.6"/>
         </g>
