--- a/src/app/views/military-fortress/military-fortress.component.scss
+++ b/src/app/views/military-fortress/military-fortress.component.scss
@@ -33,7 +33,7 @@ div.military-fortress_wrapper {
 
                 p {
                     color: white;
-                    column-count: 2;
+                   /* column-count: 2; */
                     text-align: justify;
                     font-weight: 500;
                 }
@@ -99,7 +99,7 @@ div.military-fortress_wrapper {
                 transform 0.7s ease-in-out;
             width: 100%;
             height: 100%;
-            padding: 50px;
+            padding: 20px;
 
             svg {
                 height: 100%;
@@ -122,11 +122,11 @@ div.military-fortress_wrapper {
         }
 
         &.extended {
-            height: 500px;
-            width: 400px;
+            height: 400px;
+            width: 300px;
             border-radius: 15px;
             border-top-right-radius: 15px;
-            padding: 20px;
+            padding: 10px;
             transition: 
                 border-radius 0.85s 0.0s ease-in-out,
                 border-top-right-radius 0.3s,
