--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,19 @@ h1 {
     font-size: 2.5em
 }
 
+h2, h3, h4 {
+    font-family: 'Playfair Display';
+}
+
+a.btn {
+    text-transform: uppercase;
+    background-color: transparent;
+    border-radius: 0px;
+    border: 2px solid black;
+    color: black;
+    font-size: .75em;
+}
+
 /*background-image: linear-gradient(to top, #ff0844 0%, #ff9191 100%);
 
 #fc5a74
