--- a/src/app/div/div.component.html
+++ b/src/app/div/div.component.html
@@ -23,8 +23,8 @@
     <p>
       Im Rahmen des Lehrplanes der BBBaden für die Matura, ist für jedes Schuljahr eine oder mehrere, grössere oder
       kleinere interdisziplinäre Arbeiten gedacht.
-      Diese können aus einem Vortag über ein Thema in der Mathematik, einer Recherche zu einem Buch oder einer
-      Präsentation über einen Film mit historischem Hintergrund bestehen.
+      Diese können aus einem Vortag über ein Thema in der Mathematik, einer Recherche zu einem Buch, einer
+      Präsentation über einen Film mit historischem Hintergrund und anderen Afuträgen in diesem Format bestehen.
       Jeder solchen Arbeit liegt das inhaltliche Gesamtkonzept (das interdisziplinäre Arbeiten in den Fächern) zu
       Grunde.
       Über die ersten 3 Jahre werden die Schüler so auf den Höhepunkt dieser Projekte, der IDPA am Ende des 3.
