--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,11 +2,19 @@
 
   <div class="row">
     <div class="col-12 mb-5">
-      <h2>Es ist 1940</h2>
+      <h2>Wir schreiben das Jahr 1940</h2>
       <hr>
       <p>
-        Man stelle sich vor es ist 1940. Die deutschen Flieger fliegen gefährlich nah an der Schweiz,
-        die Franzosen machen langsam schlapp und die Schweiz rüstet die Bergen mit Bunkern aus.
+        Der Zweite Weltkrieg hat gerade erst begonnen, und so beginnt sich auch der Schrecken des Krieges in jede Ecke
+        zu erstrecken.
+        Der Schaden, der in den nächsten 5 Jahren angerichtet wird, ist noch nicht vorstellbar.
+        Scheinbar die ganze Welt liegt sich in den Haaren.
+      </p>
+      <p>
+        Inmitten dieser kämpfenden Grossmächte Europas sitzt die kleine Schweiz.
+        Sie hätte sich einmischen oder ergeben können, anstelle fing sie aber an, ihre
+        Berge mit Bunkern auszurüsten, wohl um den Deutschen, im Falle einer Invasion,
+        das Leben wenigstens noch erschweren zu können.
       </p>
       <p>
         Als Teil unserer IDPA Arbeit an der BBBaden in 2018-19 erarbeiteten wir einen Einblick in die Personen,
@@ -24,9 +32,10 @@
           <h4 class="card-title">Wieso gab es diese Bunker?</h4>
           <p class="card-text">
             Die Schweiz war im Zweiten Weltkrieg in der glücklichen Lage, von keinem feindlichen Lang eingenommen zu
-            werden, jedoch war die Angst vor einem Angriff konstant vorhanden und riefen mit der Zeit nach
-            Vorbereitungsaktionen.
-            So gab Henri Guisan 19.. die ersten Befehle, Bunker in der Schweiz zu errichten, von denen aus das
+            werden, jedoch war die Angst vor einem Angriff konstant vorhanden und rief mit der Zeit nach
+            Vorkehraktionen.
+            So gab Henri Guisan zum Start des Zweiten Weltkrieges die ersten Befehle, Bunker in der Schweiz zu
+            errichten, von denen aus das
             Militär die Feinde so lange, wie möglich zurückhalten könnte.
           </p>
         </div>
@@ -59,8 +68,8 @@
           <h4 class="card-title">Wie steht es mit den Bunkern heute?</h4>
           <p class="card-text">
             Nach dem Ende des Zweiten Weltkrieges wurden einige Bunker stillgelegt, andere wurden zu Museen, Hotels
-            oder ... umegrüstet.
-            Mit unserer IDPA Gruppe besuchten wir eine dieser Bunker-Museen, die Festung Vitznau.
+            oder ähnlichem umegrüstet.
+            Mit unserer IDPA Gruppe besuchten wir eine dieser Bunker-Museen, die Festung Vitznau im Kanton Luzern.
             Unsere Eindrücke und Bilder dieses Besuches präsentieren wir ebenfalls auf dieser Seite.
           </p>
         </div>
