Chane: Military-Fortress

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,6 +19,9 @@
 </div>
 <div class="menu_second_wrapper" [ngClass]="{ extended: menuStateExtended }">
   <div class="menu_second_items_wrapper">
+    <a class="menu_item" routerLink="/">
+      Home
+    </a>
     <a class="menu_item" routerLink="/div" fragment="about">
       Impressum
     </a>
