--- a/src/app/views/military-fortress/military-fortress.component.scss
+++ b/src/app/views/military-fortress/military-fortress.component.scss
@@ -63,8 +63,7 @@ div.military-fortress_wrapper {
         justify-content: center;
         align-items: center;
         background-color: white;
-        border-radius: 100px;
-        border-top-right-radius: 100px;
+        border-radius: 20px;
         position: absolute;
         height: 40px;
         width: 40px;
@@ -72,8 +71,7 @@ div.military-fortress_wrapper {
         top: 50px;
         transition: 
             height 0.7s 0.15s ease-in-out, width 0.7s 0.15s ease-in-out,
-            border-radius 0.85s ease-in-out,
-            border-top-right-radius 0.3s 0.7s;
+            border-radius 0.85s ease-in-out;
 
     
         div.military-fortress_map_toggle-icon {
@@ -100,10 +98,12 @@ div.military-fortress_wrapper {
             width: 100%;
             height: 100%;
             padding: 20px;
+            display: flex;
+            flex-flow: column;
 
             svg {
-                height: 100%;
                 width: 100%;
+                height: 100%;
 
                 .strokeaccent {
                     stroke:#ff7272;
@@ -118,6 +118,25 @@ div.military-fortress_wrapper {
                 .fillnone {
                     fill: white;
                 }
+                transform: scale(0);
+                transition: 
+                    transform 0.7s ease-in-out;
+            }
+
+            span.military-fortress_linkbutton {
+                font-size: 12px;
+                font-weight: bold;
+                cursor: pointer;
+                transform: scale(0);
+                transition: 
+                    transform 0.7s ease-in-out;
+            }
+
+            span.military-fortress_descriptiontext {
+                font-size: 15px;
+                transform: scale(0);
+                transition: 
+                    transform 0.7s ease-in-out;
             }
         }
 
@@ -125,11 +144,9 @@ div.military-fortress_wrapper {
             height: 400px;
             width: 300px;
             border-radius: 15px;
-            border-top-right-radius: 15px;
             padding: 10px;
             transition: 
                 border-radius 0.85s 0.0s ease-in-out,
-                border-top-right-radius 0.3s,
                 height 0.7s 0.05s ease-in-out, width 0.7s 0.05s ease-in-out;
     
             div.military-fortress_content {
@@ -138,6 +155,24 @@ div.military-fortress_wrapper {
                 transition:         
                     opacity 0.5s 0s ease-in-out,
                     transform 0.7s 0.15s ease-in-out;
+                    
+                svg {
+                    transform: scale(1);
+                    transition:         
+                        transform 0.7s 0.15s ease-in-out;
+                }
+    
+                span.military-fortress_linkbutton {
+                    transform: scale(1);
+                    transition:         
+                        transform 0.7s 0.15s ease-in-out;
+                }
+    
+                span.military-fortress_descriptiontext {
+                    transform: scale(1);
+                    transition:         
+                        transform 0.7s 0.15s ease-in-out;
+                }
             }
         }
     }
