--- a/src/app/views/person/person-overview/person-overview.component.scss
+++ b/src/app/views/person/person-overview/person-overview.component.scss
@@ -4,80 +4,58 @@ div.person-overview_wrapper {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-
-  .border {
-    background-color: white;
-    position: absolute;
-  }
-  div.border-top {
-    top: 0px;
-    width: 100vw;
-    height: 20px;
-  }
-  div.border-bottom {
-    bottom: 0px;
-    width: 100vw;
-    height: 20px;
-  }
-  div.border-left {
-    left: 0px;
-    height: 100vh;
-    width: 20px;
-    top: 0px;
-  }
-  div.border-right {
-    right: 0px;
-    height: 100vh;
-    width: 20px;
-    top: 0px;
-  }
+  padding: 50px;
 
   div.person-overview_slides {
     height: 100%;
     display: flex;
-    //width: calc(100vw * 3);
-    transform: translateX(-000vw);
     transition: transform 1s ease-in-out;
 
     div.person-overview_slide {
-      height: 100%;
+      min-width: 250px;
       width: 100%;
-      background-position: center;
-      background-size: cover;
       position: relative;
+      margin: 60px 20px;
+      border-radius: 10px;
+      background-color: #f7f7f7;
+      display: flex;
+      flex-flow: column;
+      border-radius: 15px;
 
-      div.person-fact-sheet {
+      div.person-image-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
-        border-radius: 100px;
-        border-top-right-radius: 100px;
-        position: absolute;
-        height: 500px;
-        width: 400px;
-        right: 50px;
-        top: 50px;
-        border-radius: 15px;
-        border-top-right-radius: 15px;
-        padding: 20px;
+
+        div.person-image {
+          height: 0px;
+          width: 80%;
+          margin-top: 10%;
+          padding-bottom: 80%;
+          background-position: center;
+          background-size: cover;
+          border-radius: 100%;
+        }
       }
-    }
-  }
+      
+      div.person-fact-sheet {
+        width: 100%;
+        height: 100%;
+        padding: 30px; 
 
-  div.person-overview_slideshow_buttons {
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
+        h1 {
+          text-align: center;
+          padding-bottom: 20px;
+        }
+      }
 
-    div.person-overview_slideshow_button {
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      background-color: white;
-      border-radius: 100px;
-      height: 40px;
-      width: 40px;
-      margin-left: 10px;
+      div.person-button {
+        margin-bottom: 40px;
+        text-align: center;
+        position: relative;
+      }
     }
   }
 }
