changes: base-styles

--- a/src/app/views/military-fortress/military-fortress.component.html
+++ b/src/app/views/military-fortress/military-fortress.component.html
@@ -45,7 +45,7 @@
         </span>
       </ng-container>
       <ng-container *ngIf="isMapStateLivingroom1floor()">
-        <span (click)="changeMap(0)" class="military-fortress_linkbutton">❮ ZURÜCK</span>
+        <span (click)="changeMap(0)" class="linkbtn">❮ ZURÜCK</span>
         <svg viewBox="0 0 358.4 445.9">
           <g id="Path_1" data-name="Path 1" >
             <polygon fill="#383838" points="285,333.1 186.6,234.3 174.3,246.6 167.1,239.4 131.8,274.6 127.5,270.3 167.1,230.9 174.3,238.1 
@@ -72,12 +72,12 @@
         <span class="military-fortress_descriptiontext">
             Unterkunftstrakt - 1. Stockwerk
         </span>
-        <span (click)="changeMap(2)" class="military-fortress_linkbutton">
+        <span (click)="changeMap(2)" class="linkbtn">
             Zum 2. Stockwerk ❯
         </span>
       </ng-container>
       <ng-container *ngIf="isMapStateLivingroom2floor()">
-        <span (click)="changeMap(0)" class="military-fortress_linkbutton">❮ ZURÜCK</span>
+        <span (click)="changeMap(0)" class="linkbtn">❮ ZURÜCK</span>
         <svg id="Layer_1" viewBox="0 0 358.4 445.9" >
             <g id="Path_1" data-name="Path 1" >
               <polygon fill="#383838" points="283.3,332.3 184.9,233.4 172.6,245.7 165.5,238.5 130.1,273.7 125.9,269.5 165.5,230 172.6,237.2 
@@ -105,7 +105,7 @@
         <span class="military-fortress_descriptiontext">
             Unterkunftstrakt - 2. Stockwerk
         </span>
-        <span (click)="changeMap(1)" class="military-fortress_linkbutton">
+        <span (click)="changeMap(1)" class="linkbtn">
             Zum 1. Stockwerk ❯
         </span>
       </ng-container>
