--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ p{
 h1 {
     font-family: 'Playfair Display';
     font-style: italic;
-    font-size: 2.5em
+    font-size: 2.3em
 }
 
 h2, h3, h4 {
@@ -35,6 +35,16 @@ h2, h3, h4 {
     font-size: 15px;
     font-weight: bolder;
     padding: 8px 12px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.linkbtn {
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
 }
 
 /*background-image: linear-gradient(to top, #ff0844 0%, #ff9191 100%);
